# tamtam

./: .gitignore  .project  AUTHORS  HACKING  Makefile  Makefile.am  NEWS  README  TODO  TamTamEdit.py  TamTamJam.py  TamTamMini.py  TamTamSynthLab.py  autogen.sh  configure.ac  olpc_get_stuff.sh  setup.py  setup.sh  tamtam.activity
Docs/: SynthLab.txt
Edit/: EditToolbars.py  HitInterface.py  MainWindow.py  NoteInterface.py  Properties.py  TrackInterface.py  TuneInterface.py
Jam/: Block.py  Desktop.py  Fillin.py  GenRythm.py  JamMain.py  Parasite.py  Picker.py  Popup.py  RythmGenerator.py  Toolbars.py
LLTimer/: Makefile  lltimer.cpp  lltimer.cpp~  lltimer.h~  off.h
Mini/: Fillin.py  GenRythm.py  InstrumentPanel.py  KeyboardStandAlone.py  Loop.py  MiniSequencer.py  RythmGenerator.py  miniTamTamMain.py  miniToolbars.py
Player/: Makefile.am
Resources/: Makefile.am  crop.csd  tamtamorc.csd  univorc.csd
Resources/Images/: Makefile.am
Resources/Sounds/: Makefile.am  acguit  add  banjo  basse  bird  bottle  bubbles  cat  cello  chimes  clang  clarinette  cling  diceinst  didjeridu  dog  door  drum1chine  drum1crash  drum1floortom  drum1hardride  drum1hatpedal  drum1hatshoulder  drum1kick  drum1ridebell  drum1snare  drum1snarerimshot  drum1snaresidestick  drum1splash  drum1tom  drum2darbukadoom  drum2darbukafinger  drum2darbukapied  drum2darbukapiedsoft  drum2darbukaroll  drum2darbukaslap  drum2darbukatak  drum2hatflanger  drum2hatpied  (+84 more)
SynthLab/: SynthLabConstants.py  SynthLabMain.py  SynthLabToolbars.py
TamTamEdit.activity/: MANIFEST  NEWS  TamTamEdit.py  setup.py
TamTamJam.activity/: MANIFEST  NEWS  TamTamJam.py  setup.py
TamTamMini.activity/: MANIFEST  NEWS  TamTamMini.py  setup.py
TamTamSynthLab.activity/: MANIFEST  NEWS  TamTamSynthLab.py  setup.py
activity/: NEWS  activity.info  activity_edit.info  activity_jam.info  activity_mini.info  activity_sl.info
common/: Config.py  Tooltips.py
po/: TamTam.pot  TamTamEdit.master.es.po  TamTamSuite.pot  ab.po  ach.po  af.po  agr.po  am.po  an.po  ar.po  arn.po  ast.po  ayc.po  aym.po  az.po  be.po  be_Latn.po  bg.po  bi.po  bn.po  bn_IN.po  br.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fa_AF.po  fi.po  fil.po  fr.po  (+81 more)
scripts/: activity-install.sh  create_symlinks.sh  install-extra-rpms.sh  (+6 more)
(+426 files in other folders)
