activitydir = $(datadir)/sugar/activities/tamtam/Resources/Images
EXTRA_DIST =  \
    add.png \
    basse.png \
    bird.png \
    bottle.png \
    cat.png \
    clang.png \
    clarinette.png \
    complex.png \
    dice.png \
    dog.png \
    drum1kit.png \
    drum1kitsmall.png \
    drum2kit.png \
    drum2kitsmall.png \
    drum3kit.png \
    drum3kitsmall.png \
    duck2.png \
    duck.png \
    fast.png \
    flute.png \
    fm1.png \
    fm2.png \
    gam.png \
    gong.png \
    guit.png \
    koto.png \
    large.png \
    laugh.png \
    maracas.png \
    marimba.png \
    mic1.png \
    mic2.png \
    mic3.png \
    mic4.png \
    ounk.png \
    ow.png \
    piano.png \
    play.png \
    recordoff.png \
    record.png \
    sheep.png \
    simple.png \
    slow.png \
    small.png \
    spring.png \
    stop.png \
    tamtam.png \
    triangle.png \
    trumpet.png \
    water.png \
    zap.png

