activitydir = $(datadir)/sugar/activities/tamtam/Resources/Sounds
EXTRA_DIST =  \
    add \
    bird \
    bottle \
    cat \
    clang \
    clarinette \
    dog \
    drum1chine \
    drum1crash \
    drum1floortom \
    drum1hardride \
    drum1hatpedal \
    drum1hatshoulder \
    drum1kick \
    drum1ridebell \
    drum1snare \
    drum1snarerimshot \
    drum1snaresidestick \
    drum1splash \
    drum1tom \
    drum2darbukadoom \
    drum2darbukafinger \
    drum2darbukapied \
    drum2darbukapiedsoft \
    drum2darbukaroll \
    drum2darbukaslap \
    drum2darbukatak \
    drum2hatflanger \
    drum2hatpied \
    drum2hatpied2 \
    drum2tambourinepied \
    drum2tambourinepiedsoft \
    drum3cowbell \
    drum3cowbelltip \
    drum3cup \
    drum3djembelow \
    drum3djembemid \
    drum3djembesidestick \
    drum3djembeslap \
    drum3djembestickmid \
    drum3metalstand \
    drum3pedalperc \
    drum3rainstick \
    drum3tambourinehigh \
    drum3tambourinelow \
    duck \
    duck2 \
    flute \
    fm1 \
    fm2 \
    gam \
    gong \
    guit \
    koto \
    laugh \
    maracas \
    marimba \
    mic1 \
    mic2 \
    mic3 \
    mic4 \
    ounk \
    ow \
    piano \
    sheep \
    spring \
    triangle \
    trumpet \
    water \
    zap
